# animate

./: .eslintrc.cjs  .gitignore  Cargo.toml  LICENSE  README.md  agents.md  coverage.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.caws/: color-system-spec.yaml  developer-mode-spec.yaml  effects-spec.yaml  export-system-spec.yaml  feature-plan.md  impact-map.md  media-pipeline-spec.yaml  non-functional.md  test-plan.md  timeline-spec.yaml  validate.js  working-spec-new.yaml  working-spec.yaml  workspace-management-spec.yaml
codemod/: rename.ts
docs/: README.md  api-design.md  api-integration.md  caws-structure.md  code-splitting-summary.md  collaboration-strategy.md  collaboration.plan.md  collaboration.test-plan.md  color-system.implementation.md  color-system.plan.md  color-system.test-plan.md  developer-mode.plan.md  developer-mode.test-plan.md  effects-system-summary.md  figma-plugin-analysis.md  frontend-audit-report.md  frontend-fixes-summary.md  implementation-audit-trail.md  keyboard-shortcuts.md  refactoring-complete-summary.md  scene-graph.impact-map.md  scene-graph.non-functional.md  scene-graph.plan.md  scene-graph.test-plan.md  session-progress-summary.md  shape-system-implementation.md  test-infrastructure-improvements.md  testing-strategy.md  text-system-implementation.md  v.0.plan.md  workspace-management.impact-map.md  workspace-management.non-functional.md  workspace-management.test-plan.md
implementation/: README.md
scripts/: replace-console-logs.js
shaders/: rectangle.frag.wgsl  (+1 more)
(+234 files in other folders)
