[package]
name = "animator-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
wgpu = { version = "0.19", features = ["webgl"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "Gpu",
  "GpuAdapter",
  "GpuDevice",
  "GpuQueue",
  "GpuBuffer",
  "GpuTexture",
  "GpuTextureView",
  "GpuShaderModule",
  "GpuRenderPipeline",
  "GpuBindGroup",
  "GpuBindGroupLayout",
  "GpuPipelineLayout",
  "GpuCommandEncoder",
  "GpuRenderPassEncoder",
  "GpuComputePassEncoder",
  "GpuCanvasContext",
]

[features]
default = ["console_error_panic_hook"]
